Fixes line wrapping on home page. Styles blog post permalink

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -6,6 +6,15 @@ body {
   overflow: hidden;
 }
 
+pre {
+  font-size: 17px;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 .logo {
   font-size: 20px;
   color: black;
